--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@ MONGO_ROOT_PASSWORD=admin
 MONGO_PORT=27017
 
 # ui
-UI_PORT=4200
+UI_HOST_PORT=4220
+UI_EXPOSED_PORT=4220
 
 # api
-API_PORT=3000
+API_HOST_PORT=3003
+API_EXPOSED_PORT=3004
