--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,8 +9,10 @@ services:
     volumes:
       - ./ui:/usr/src/app
       - /usr/src/app/node_modules
+    environment:
+      - EXPOSED_PORT=${UI_EXPOSED_PORT}
     ports:
-      - ${UI_PORT}:4200
+      - ${UI_HOST_PORT}:${UI_EXPOSED_PORT}
 
   api:
     image: api:dev
@@ -20,8 +22,10 @@ services:
     volumes:
       - ./api:/usr/src/app
       - /usr/src/app/node_modules
+    environment:
+      - EXPOSED_PORT=${API_EXPOSED_PORT}
     ports:
-      - ${API_PORT}:3001
+      - ${API_HOST_PORT}:${API_EXPOSED_PORT}
 
   mongo:
     image: mongo
