--- a/.env
+++ b/.env
@@ -3,10 +3,32 @@ MONGO_ROOT_USERNAME=admin
 MONGO_ROOT_PASSWORD=admin
 MONGO_PORT=27017
 
+# mongo express
+MONGO_EXPRESS_PORT=8000
+
+# mysql
+MYSQL_ROOT_PASSWORD=root_password
+MYSQL_USER=admin
+MYSQL_PASSWORD=admin
+MYSQL_PORT=3306
+PMA_HOST_PORT=8001
+
 # ui
-UI_HOST_PORT=4220
+UI_HOST_PORT=80
 UI_EXPOSED_PORT=4220
 
-# api
-API_HOST_PORT=3003
-API_EXPOSED_PORT=3004
+# gateway
+GATEWAY_HOST_PORT=8080
+GATEWAY_EXPOSED_PORT=80
+
+# svc-users
+SVC_USERS_HOST_PORT=8081
+SVC_USERS_EXPOSED_PORT=80
+
+# svc-groups
+SVC_GROUPS_HOST_PORT=8082
+SVC_GROUPS_EXPOSED_PORT=80
+
+# svc-posts
+SVC_POSTS_HOST_PORT=8083
+SVC_POSTS_EXPOSED_PORT=80
