--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,22 +14,43 @@ services:
     ports:
       - ${UI_HOST_PORT}:${UI_EXPOSED_PORT}
 
-  api:
-    image: api:dev
+  gateway:
+    image: gateway:dev
     build:
-      context: ./api
+      context: ./gateway
+    ports:
+      - ${GATEWAY_HOST_PORT}:${GATEWAY_EXPOSED_PORT}
+
+  svc-users:
+    image: svc-users:dev
+    build:
+      context: ./svc-users
+    ports:
+      - ${SVC_USERS_HOST_PORT}:${SVC_USERS_EXPOSED_PORT}
+
+  svc-groups:
+    image: svc-groups:dev
+    build:
+      context: ./svc-groups
+    ports:
+      - ${SVC_GROUPS_HOST_PORT}:${SVC_GROUPS_EXPOSED_PORT}
+
+  svc-posts:
+    image: svc-posts:dev
+    build:
+      context: ./svc-posts
       target: developement
     volumes:
-      - ./api:/usr/src/app
-      - api_node_modules:/usr/src/app/node_modules
-    environment:
-      - EXPOSED_PORT=${API_EXPOSED_PORT}
+      - ./svc-posts:/usr/src/app
+      - svc_posts_node_modules:/usr/src/app/node_modules
     ports:
-      - ${API_HOST_PORT}:${API_EXPOSED_PORT}
+      - ${SVC_POSTS_HOST_PORT}:${SVC_POSTS_EXPOSED_PORT}
 
   mongo:
     image: mongo
     restart: always
+    ports:
+      - ${MONGO_PORT}:${MONGO_PORT}
     volumes:
       - ./.mongo/data:/data/db
     environment:
@@ -40,22 +61,49 @@ services:
     image: mongo-express
     restart: always
     ports:
-      - 8081:8081
+      - ${MONGO_EXPRESS_PORT}:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USERNAME}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD}
       ME_CONFIG_MONGODB_URL: mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@mongo:${MONGO_PORT}/
+    links:
+      - mongo
+
+  mysql:
+    image: mysql
+    container_name: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    ports:
+      - ${MYSQL_PORT}:${MYSQL_PORT}
+    volumes:
+      - ./.mysql/data:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: pma
+    links:
+      - mysql
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: ${MYSQL_PORT}
+      PMA_ARBITRARY: 1
+    restart: always
+    ports:
+      - ${PMA_HOST_PORT}:80
 
 volumes:
-  api_node_modules:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${PWD}/api/node_modules
   ui_node_modules:
     driver: local
     driver_opts:
       type: none
       o: bind
       device: ${PWD}/ui/node_modules
+  svc_posts_node_modules:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/svc-posts/node_modules
