--- a/.env
+++ b/.env
@@ -24,6 +24,11 @@ GATEWAY_EXPOSED_PORT=80
 # svc-users
 SVC_USERS_HOST_PORT=8081
 SVC_USERS_EXPOSED_PORT=80
+MYSQL_USER_SVC_USER=user_db_user
+MYSQL_PASSWORD_SVC_USER=password
+MYSQL_HOST=mysql
+MYSQL_PORT=3306
+DB_SVC_USER=user_db
 
 # svc-groups
 SVC_GROUPS_HOST_PORT=8082
