--- a/svc-users/composer.json
+++ b/svc-users/composer.json
@@ -7,6 +7,10 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.9",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.14",
+        "lexik/jwt-authentication-bundle": "^2.18",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
@@ -14,7 +18,9 @@
         "symfony/runtime": "6.2.*",
         "symfony/yaml": "6.2.*"
     },
-    "require-dev": {},
+    "require-dev": {
+        "symfony/maker-bundle": "^1.48"
+    },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
