--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,13 @@ services:
     build:
       context: ./ui
       target: developement
+      args:
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
     volumes:
       - ./ui:/usr/src/app
       - ui_node_modules:/usr/src/app/node_modules
@@ -18,6 +25,13 @@ services:
     image: gateway:dev
     build:
       context: ./gateway
+      args:
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
     ports:
       - ${GATEWAY_HOST_PORT}:${GATEWAY_EXPOSED_PORT}
 
@@ -26,7 +40,12 @@ services:
     build:
       context: ./svc-users
       args:
-        - DATABASE_URL="pdo-mysql://${MYSQL_USER_SVC_USER}:${MYSQL_PASSWORD_SVC_USER}@${MYSQL_HOST}:${MYSQL_PORT}/${DB_SVC_USER}?serverVersion=8.0"
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
     environment:
       - DATABASE_URL="pdo-mysql://${MYSQL_USER_SVC_USER}:${MYSQL_PASSWORD_SVC_USER}@${MYSQL_HOST}:${MYSQL_PORT}/${DB_SVC_USER}?serverVersion=8.0"
     volumes:
@@ -39,6 +58,13 @@ services:
     image: svc-groups:dev
     build:
       context: ./svc-groups
+      args:
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
     ports:
       - ${SVC_GROUPS_HOST_PORT}:${SVC_GROUPS_EXPOSED_PORT}
 
@@ -47,6 +73,13 @@ services:
     build:
       context: ./svc-posts
       target: developement
+      args:
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
     volumes:
       - ./svc-posts:/usr/src/app
       - svc_posts_node_modules:/usr/src/app/node_modules
@@ -87,6 +120,7 @@ services:
       - ${MYSQL_PORT}:${MYSQL_PORT}
     volumes:
       - ./.mysql/data:/var/lib/mysql
+      - ./mysql/script:/docker-entrypoint-initdb.d
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
