init modify user

--- a/svc-users/config/packages/security.yaml
+++ b/svc-users/config/packages/security.yaml
@@ -36,7 +36,7 @@ security:
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/register, roles: PUBLIC_ACCESS }
-        - { path: ^/,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/,       roles: PUBLIC_ACCESS } #TODO fully auth
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
