--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,13 @@ services:
     build:
       context: ./ui
       target: developement
+      args:
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
     volumes:
       - ./ui:/usr/src/app
       - ui_node_modules:/usr/src/app/node_modules
@@ -18,6 +25,13 @@ services:
     image: gateway:dev
     build:
       context: ./gateway
+      args:
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
     ports:
       - ${GATEWAY_HOST_PORT}:${GATEWAY_EXPOSED_PORT}
 
@@ -25,13 +39,34 @@ services:
     image: svc-users:dev
     build:
       context: ./svc-users
+      args:
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
+    environment:
+      - DATABASE_URL="pdo-mysql://${MYSQL_USER_SVC_USER}:${MYSQL_PASSWORD_SVC_USER}@${MYSQL_HOST}:${MYSQL_PORT}/${DB_SVC_USER}?serverVersion=8.0"
+    volumes:
+      - ./svc-users:/var/www/html
+      - svc_users_vendor:/var/www/html/vendor
     ports:
       - ${SVC_USERS_HOST_PORT}:${SVC_USERS_EXPOSED_PORT}
+    links:
+      - mysql
 
   svc-groups:
     image: svc-groups:dev
     build:
       context: ./svc-groups
+      args:
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
     ports:
       - ${SVC_GROUPS_HOST_PORT}:${SVC_GROUPS_EXPOSED_PORT}
 
@@ -40,6 +75,13 @@ services:
     build:
       context: ./svc-posts
       target: developement
+      args:
+        - HTTP_PROXY
+        - HTTPS_PROXY
+        - NO_PROXY
+        - http_proxy
+        - https_proxy
+        - no_proxy
     volumes:
       - ./svc-posts:/usr/src/app
       - svc_posts_node_modules:/usr/src/app/node_modules
@@ -80,6 +122,7 @@ services:
       - ${MYSQL_PORT}:${MYSQL_PORT}
     volumes:
       - ./.mysql/data:/var/lib/mysql
+      - ./mysql/script:/docker-entrypoint-initdb.d
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -107,3 +150,9 @@ volumes:
       type: none
       o: bind
       device: ${PWD}/svc-posts/node_modules
+  svc_users_vendor:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/svc-users/vendor
