--- a/svc-users/config/packages/security.yaml
+++ b/svc-users/config/packages/security.yaml
@@ -28,6 +28,7 @@ security:
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/register, roles: PUBLIC_ACCESS }
+        - { path: ^/api/health,       roles: PUBLIC_ACCESS }
         - { path: ^/api,       roles: ROLE_USER }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
